3个功能